# rs-lfgbot

./: Cargo.toml  diesel.toml
src/: db.rs  main.rs
src/lfgbot/: lib.rs
src/lfgbot/commands/: mod.rs  showme.rs
src/lfgbot/models/: mod.rs  need.rs  role.rs  team.rs  user_role.rs
src/models/: mod.rs  need.rs  role.rs  team.rs
